@@ -20,4 +20,4 @@ exuberant_ctags_la_LDFLAGS = -module -avoid-version
 user_custom_la_SOURCES = user-custom.c
 user_custom_la_LDFLAGS = -module -avoid-version
 
-INCLUDES = @INCLUDES@
+AM_CPPFLAGS = @AM_CPPFLAGS@
